# antlr-editor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  mise.toml  playwright-config.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: analyzer-ci.yml  analyzer-ffi.yml  analyzer-wasm.yml  editor-app-ci.yml
.husky/: pre-commit
analyzer/: .gitignore  .golangci.toml  CLAUDE.md  Dockerfile  FORMATTING_RULES.md  README.md  benchmark-wasm.sh  build-wasm.sh  codegen.sh  go.mod  go.sum  main.go
analyzer/ffi/: analyzer.go  validator.go
analyzer/ffi/python/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
analyzer/ffi/python/examples/: example.py
analyzer/ffi/python/src/analyzer/: __init__.py  analyzer.py
analyzer/ffi/python/src/analyzer/models/: __init__.py  error.py  result.py  token.py
analyzer/python/: __init__.py  analyzer_ffi.py  example.py  libanalyzer.dylib  libanalyzer.h  requirements.txt  setup.py
analyzer/wasm/: analyzer.go  analyzer_test.go  validator.go
editor-app/: .gitignore  README.md  analyzer.md  angular.json  biome.json  package-lock.json  package.json  plan.md  tsconfig.app.json  tsconfig.json
editor-app/.claude/: settings.local.json
editor-app/src/: index.html  styles.css
editor-app/types/: analyzer.d.ts  global.d.ts
grammar/: Expression.g4  grammar.g4  grammar.md
parser/: CLAUDE.md  Dockerfile  README.md  go.mod  main.go
parser/core/: analyzer.go  analyzer_test.go  validator.go  validator_test.go
(+47 files in other folders)
