[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analyzer"
version = "0.1.0"
description = "Python bindings for ANTLR Expression Analyzer"
readme = "README.md"
authors = [
    {name = "saint1991"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Go",
]
requires-python = ">=3.10"
keywords = ["antlr", "token analyzer"]

[project.urls]
Homepage = "https://github.com/saint1991/antlr-editor"
"Bug Reports" = "https://github.com/saint1991/antlr-editor/issues"
Source = "https://github.com/saint1991/antlr-editor"

[project.optional-dependencies]
build = [
    "setuptools>=80.9.0",
    "wheel",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
